<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description"
        android:foreground="#4d000000"
        android:scaleType="centerCrop"
        android:src="@drawable/bglogin" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_button" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_signin"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/mavenpro_bold"
        android:text="@string/log_kku"
        android:textColor="@color/button_login"
        android:textSize="@dimen/login_size"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_log"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mavenpro_regular"
        android:text="@string/pre_login1"
        android:textColor="@color/button_login" />

    <TextView
        android:id="@+id/tv_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mavenpro_regular"
        android:text="@string/pre_login2"
        android:textColor="@color/button_login" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_ripple_background"
        android:fontFamily="@font/mavenpro_bold"
        android:text="@string/log_skip"
        android:textColor="@color/button_login"
        android:textSize="@dimen/login_size"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/logo_log"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/app_icon" />


</RelativeLayout>