<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="@android:color/white">

        <ProgressBar
            android:id="@+id/progress_bar_user"
            style="@style/MyProgressBarRectangle"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_centerInParent="true"/>

    <ScrollView
        android:id="@+id/scrollView_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

              <ImageView
                  android:id="@+id/btn_signout"
                  android:layout_width="24dp"
                  android:layout_height="24dp"
                  android:src="@drawable/shutdown"
                  android:foreground="@drawable/btn_ripple_background_red"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/my_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_event"
                    android:fontFamily="@font/anakotmaimedium"
                    android:textSize="14sp"
                    android:textColor="@color/main_header"
                    android:background="@drawable/ounded_uncheck_box"
                    android:foreground="@drawable/btn_ripple_background_red"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />

                <ImageView
                    android:id="@+id/img_calendar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/description"
                    android:src="@drawable/ic_event_available_black_24dp"
                    android:foreground="@drawable/btn_ripple_background_red"/>

            </LinearLayout>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/userr"
                app:civ_border_width="2dp"
                app:civ_border_color="#00000000"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Username"
                android:fontFamily="@font/morkhor1"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tv_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mail"
                android:fontFamily="@font/morkhor1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                />

            <LinearLayout
                android:id="@+id/linear_fev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:fontFamily="@font/bangnanew"
                        android:textSize="40sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/black"/>
                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/like"
                        android:layout_gravity="center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/tv_num_join"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:fontFamily="@font/bangnanew"
                        android:textSize="40sp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join"
                        android:layout_gravity="center"
                        android:fontFamily="@font/anakotmaimedium"
                        android:textColor="@android:color/white"
                        android:background="@color/main_header"
                        android:padding="5dp"/>

                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="35dp">
                <RadioGroup
                    android:id="@+id/rg_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb_user_fev"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite"
                        android:layout_weight="1"
                        android:fontFamily="@font/morkhor1"
                        android:textSize="25sp"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:button="@null"
                        android:checked="true"
                        android:background="@drawable/select_menu_user" />
                    <RadioButton
                        android:id="@+id/rb_user_upcome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_event"
                        android:layout_weight="1"
                        android:fontFamily="@font/morkhor1"
                        android:textSize="25sp"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:button="@null"
                        android:background="@drawable/select_menu_user"/>
                </RadioGroup>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_view_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>